# semantic_perception

cylinder_segmentation/: CMakeLists.txt  cluster_features.txt  mainpage.dox  manifest.xml
cylinder_segmentation/launch/: segmentation.launch
cylinder_segmentation/residual_cloud/: residual_cloud_2.pcd
cylinder_segmentation/src/: cylinder_segmentation.cpp
feature_extractor/: CMakeLists.txt  mainpage.dox  manifest.xml
feature_extractor/launch/: feature_extractor.launch  segment_and_extract.launch
feature_extractor/src/: feature_extractor.cpp
object_detection/: CMakeLists.txt  manifest.xml
object_detection/detection_3d_test/: CMakeLists.txt
object_detection/detection_3d_test/cloud_data/: object_scans_1.pcd  object_scans_10.pcd  object_scans_12.pcd  object_scans_5.pcd  object_scans_8.pcd  plane_features.txt
object_detection/detection_3d_test/src/: detection_3D_test.cpp
object_detection/ros_detection_test/: CMakeLists.txt
object_detection/ros_detection_test/src/: ros_detection_test.cpp
object_detection/src/: BlobDetection.cpp  BlobDetection.hpp  CMakeLists.txt  Configuration.hpp  Main.cpp  Objects.hpp  PointCloudDetection.cpp  PointCloudDetection.hpp
object_detection/test/: CMakeLists.txt  suite.cpp  test_3D_Detection.cpp  test_BlobDetect.cpp
object_detection/test/cloud_data/: object_scans_11.pcd  object_scans_2.pcd  object_scans_3.pcd  object_scans_4.pcd  object_scans_6.pcd  object_scans_7.pcd  object_scans_9.pcd
plane_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml  plane_features.txt  segmentation_time.txt
plane_segmentation/launch/: segmentation.launch
plane_segmentation/src/: plane_segmentation.cpp
region_growing/: CMakeLists.txt  hull.cpp  hull.h  kdtree.cpp  kdtree.hpp  manifest.xml  plane.cpp  plane.h  point.h  regionGrowing.cpp  regionGrowing.h  rotatedRectangle.h  segmentation.pc.in  spatialObject.cpp  spatialObject.h
region_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml
region_segmentation/data/: cargo_hold_data.txt  cargo_time.txt  container_data.txt  container_time.txt
region_segmentation/src/: region_segmentation.cpp
region_segmentation/srv/: set_params.srv
segmentation/: CMakeLists.txt  README.txt  manifest.xml
segmentation/include/segmentation/: hull.h  plane.h  regionGrowing.h
segmentation/src/: hull.cpp  plane.cpp  regionGrowing.cpp
